--- a/src/common/resources/sass/pages/_freeInfo.scss
+++ b/src/common/resources/sass/pages/_freeInfo.scss
@@ -14,6 +14,14 @@
         }
     }
 
+    .video-content {
+        top: convert-rem(195px);
+    }
+
+    .audio-content {
+        top: 100px;
+    }
+
     .free-info-title {
         padding: 0 12px;
         line-height: 2em;
