修改商城首页商品的图片字段

--- a/src/common/templates/mall/mallIndex.html
+++ b/src/common/templates/mall/mallIndex.html
@@ -61,7 +61,7 @@
                     ng-click="mallIndex.goMallProductInfo(item.entityName)">
                     <div class="item-cont">
                         <div class="item-img">
-                            <img class="img" cm-lazyload="item.newPicUrl" load-immediate="true" />
+                            <img class="img" cm-lazyload="item.picUrl" load-immediate="true" />
                         </div>
                         <div class="item-title">
                             <!-- <span class="title-icon">预售</span> -->
