商城详情页添加轮播图

--- a/src/common/resources/sass/pages/_productInfo.scss
+++ b/src/common/resources/sass/pages/_productInfo.scss
@@ -235,3 +235,37 @@
         border-radius: 0;
     }
 }
+
+// 商城商品详情页style
+.mall-product-info-panel {
+
+    .slider-box {
+        width: convert-rem(150px);
+        height: convert-rem(220px);
+        margin: 0 auto;
+
+        .nav-hide {
+            display: none;
+        }
+    }
+
+    .ui-switch {
+        overflow: visible;
+
+        .ui-switch-nav {
+            bottom: -5px;
+            left: 50%;
+            right: auto;
+            width: 300px;
+            margin-left: -150px;
+        }
+
+        .ui-switch-nav-item {
+            background-color: #ccc;
+
+            &.active {
+                background-color: $primary-color;
+            }
+        }
+    }
+}
