--- a/src/common/templates/mall/mallIndex.html
+++ b/src/common/templates/mall/mallIndex.html
@@ -28,7 +28,8 @@
                         ng-click="mallIndex.goSliderAdv(slider)" />
                 </cm-switch-panel>
             </cm-switch-content>
-            <cm-switch-nav class="ui-switch-nav" ng-class="{'nav-hide': (index.sliderList.length <= 1)}"></cm-switch-nav>
+            <cm-switch-nav class="ui-switch-nav" 
+                ng-class="{'nav-hide': (mallIndex.sliderList.length <= 1)}"></cm-switch-nav>
         </cm-switch>
 
         <!-- 分类 -->
