首页底部广告位添加“去商城首页”的跳转

--- a/src/common/templates/index.html
+++ b/src/common/templates/index.html
@@ -130,7 +130,7 @@
             <li class="adv-item item-1 fl" ng-click="index.goAdvList(1483425657036, '时政热点')"></li>
             <li class="adv-item item-2 fl" ng-click="index.goAdvList(1483458340025, '苏北文选')"></li>
             <li class="adv-item item-3 fl" ng-click="index.goAdvList(1483435590039, '电子书')"></li>
-            <li class="adv-item item-4 fl" ng-click="index.goAdvList()"></li>
+            <li class="adv-item item-4 fl" ng-click="index.goMallIndex()"></li>
         </ul>
 
     </ion-content>
