--- a/src/common/templates/tabs.html
+++ b/src/common/templates/tabs.html
@@ -18,8 +18,7 @@
         <ion-tab title="商城"
                  icon-on="iconfont icon-shangcheng"
                  icon-off="iconfont icon-shangcheng"
-                 href="#/tabs/mallIndex"
-                 ng-click="goMallIndex()">
+                 href="#/tabs/mallIndex">
             <ion-nav-view name="mall"></ion-nav-view>
         </ion-tab>
 
