优化音频播放，实现可拖拽效果

--- a/src/common/resources/sass/_audio.scss
+++ b/src/common/resources/sass/_audio.scss
@@ -33,17 +33,31 @@
             font-size: 13px;
         }
 
-        .time-progress-line {
+        .audio-rang {
             position: relative;
             height: 2px;
-            background-color: $line-color;
+        }
 
-            .progress {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 2px;
-                background-color: $energized;
+        // 进度条
+        .range {
+            position: absolute;
+            top: 0;
+            left: 0; 
+            width: 100%;
+            height: 2px;
+            padding: 0;
+            background: $energized;
+            -webkit-appearance: none !important;
+
+            // 进度滑块
+            &::-webkit-slider-thumb {
+                width: 8px;
+                height: 8px;
+                background: #fff;
+                border: $energized 1px solid;
+                cursor: pointer;
+                border-radius: 50%;
+                -webkit-appearance: none !important;
             }
         }
 
