--- a/src/common/templates/advList.html
+++ b/src/common/templates/advList.html
@@ -22,7 +22,7 @@
         <!-- 空警告，当页面内没有数据时，显示该信息 -->
         <div class="list-empty" ng-if="advList.finishLoading && advList.advList.length == 0">
             <div class="img"></div>
-            <div class="text">还没有专题</div>
+            <div class="text">暂无专题内容</div>
         </div>
 
         <ul class="adv-list" ng-if="advList.title != '电子书'">
