友盟统计分析

--- a/src/common/templates/mall/mallIndex.html
+++ b/src/common/templates/mall/mallIndex.html
@@ -1,4 +1,4 @@
-<ion-view title="商城" cm-hide-tabs="false">
+<ion-view title="商城首页" cm-hide-tabs="false">
 
     <ion-header-bar class="bar bar-header mall-index-bar bar-primary disable-user-behavior">
         <div class="title title-center header-item">
