--- a/src/common/templates/modals/checkoutConsigneeAdd.html
+++ b/src/common/templates/modals/checkoutConsigneeAdd.html
@@ -2,7 +2,7 @@
     <ion-modal-view class="checkout-modal-panel" cm-resize-height>
 
         <div class="bar-primary-modal" ng-click="modals.checkoutConsigneeAdd.close()">
-            收货地址
+            新增收货地址
             <i class="icon-back-modal icon ion-ios-arrow-up"></i>
         </div>
 
