--- a/src/common/templates/modals/choosePayment.html
+++ b/src/common/templates/modals/choosePayment.html
@@ -2,7 +2,7 @@
 <ion-modal-view class="checkout-modal-panel">
 
     <div class="bar-primary-modal" ng-click="modals.choosePayment.close()">
-        支付方式
+        选择支付方式
         <i class="icon-close-modal icon ion-ios-close-empty"></i>
     </div>
 
