--- a/src/common/templates/modals/selectAddressRegion.html
+++ b/src/common/templates/modals/selectAddressRegion.html
@@ -3,7 +3,7 @@
 
     <ion-header-bar class="bar-primary">
         <button class="button button-clear left-btn" ng-click="modals.selectAddressRegion.close()">取消</button>
-        <h1 class="title">收货地区</h1>
+        <h1 class="title">选择收货地区</h1>
     </ion-header-bar>
 
     <ion-content delegate-handle="regionDelegate">
