--- a/src/common/templates/packageVideoList.html
+++ b/src/common/templates/packageVideoList.html
@@ -1,4 +1,4 @@
-<ion-view title="套餐" cm-hide-tabs="true">
+<ion-view title="课程详情" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
@@ -9,7 +9,7 @@
             </span>
         </div>
         <div class="title title-center header-item">
-            套餐
+            课程详情
         </div>
     </ion-header-bar>
 
