--- a/src/common/templates/user.html
+++ b/src/common/templates/user.html
@@ -1,4 +1,4 @@
-<ion-view cm-hide-tabs="false" hide-nav-bar="true">
+<ion-view title="会员中心" cm-hide-tabs="false" hide-nav-bar="true">
 
     <ion-content class="user-panel stable-bg" delegate-handle="userContentScroll">
 
