--- a/src/common/templates/advInfo.html
+++ b/src/common/templates/advInfo.html
@@ -1,4 +1,4 @@
-<ion-view title="详情" cm-hide-tabs="true">
+<ion-view title="专题详情" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
