--- a/src/common/templates/freeInfo.html
+++ b/src/common/templates/freeInfo.html
@@ -1,4 +1,4 @@
-<ion-view class="free-info-view" title="试读" cm-hide-tabs="true">
+<ion-view class="free-info-view" title="试读详情" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
@@ -9,7 +9,7 @@
             </span>
         </div>
         <div class="title title-center header-item">
-            试读
+            试读详情
         </div>
     </ion-header-bar>
 
