--- a/src/common/templates/mall/mallProductInfo.html
+++ b/src/common/templates/mall/mallProductInfo.html
@@ -1,4 +1,4 @@
-<ion-view class="product-info-view" title="商品详情" cm-hide-tabs="true">
+<ion-view class="product-info-view" title="商城商品详情" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
