--- a/src/common/templates/mall/mallSortList.html
+++ b/src/common/templates/mall/mallSortList.html
@@ -1,4 +1,4 @@
-<ion-view title="分类" cm-hide-tabs="true">
+<ion-view title="商城分类" cm-hide-tabs="true">
 
     <ion-header-bar class="bar bar-header bar-primary disable-user-behavior">
         <div class="buttons buttons-left">
@@ -9,7 +9,7 @@
             </span>
         </div>
         <div class="title title-center header-item">
-            分类
+            商城分类
         </div>
         <div class="buttons buttons-right" ng-click="mallSortList.goShoppingCart()">
             <span class="right-buttons">
