--- a/src/common/resources/sass/_audio.scss
+++ b/src/common/resources/sass/_audio.scss
@@ -7,22 +7,22 @@
     border: $line-color 1px solid;
 
     .audio-left {
-        width: 45px;
-        height: 45px;
-        line-height: 45px;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
         text-align: center;
         background-color: $primary-color;
         border-radius: 50%;
 
         .icon {
-            margin-left: 2px;
+            margin-left: 3px;
             color: $light;
-            font-size: 18px;
+            font-size: 20px;
         }
     }
 
     .audio-right {
-        margin-left: 60px;
+        margin-left: 65px;
 
         .audio-title {
             overflow: hidden;
@@ -36,6 +36,7 @@
         .audio-rang {
             position: relative;
             height: 2px;
+            margin-bottom: 5px;
         }
 
         // 进度条
@@ -51,8 +52,8 @@
 
             // 进度滑块
             &::-webkit-slider-thumb {
-                width: 8px;
-                height: 8px;
+                width: 12px;
+                height: 12px;
                 background: #fff;
                 border: $energized 1px solid;
                 cursor: pointer;
